--- a/stanford-dine/app/views/welcome/index.html.erb
+++ b/stanford-dine/app/views/welcome/index.html.erb
@@ -1,21 +1,24 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 
 <link href="assets/bootstrap.css" rel="stylesheet">
-<script src="assets/jquery-1.11.2.min.js"></script>
+
 <script>
-
 buttonpress = function(){
-    $('#plus-button').on('click', function(e){
-        alert("BUTTON WAS PRESSED");
-        console.log("button pressed");
-        $.ajax({
-          type:'POST',
-          url:'/vote/'+ $(this).attr('id') + '/1';
-        })
-    });
+    alert("BUTTON WAS PRESSED");
+    // console.log("button pressed");
+    // $.ajax({
+    //   type:'POST',
+    //   url:'/vote/'+ $(this).attr('id') + '/1';
+    // })
 }
-
+$(document).ready(function(){
+	$('#plus-button').click(function(){
+		alert("jquery button was pressed");
+	})
+})
+alert("javascript started");
 </script> 
+
 <HTML>
 	<HEAD>
 		<TITLE>Stanford Dinner</TITLE>
