--- a/stanford-dine/app/views/welcome/index.html.erb
+++ b/stanford-dine/app/views/welcome/index.html.erb
@@ -1,21 +1,16 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 
 <link href="assets/bootstrap.css" rel="stylesheet">
-<script src="assets/jquery-1.11.2.min.js"></script>
+
 <script>
+  $('#plus-button').on('click', function () {
+    var $btn = $(this).button('loading')
+    // business logic...
+    $btn.button('reset')
+  })
+</script>
 
-buttonpress = function(){
-    $('#plus-button').on('click', function(e){
-        alert("BUTTON WAS PRESSED");
-        console.log("button pressed");
-        $.ajax({
-          type:'POST',
-          url:'/vote/'+ $(this).attr('id') + '/1';
-        })
-    });
-}
-
-</script> 
+ 
 <HTML>
 	<HEAD>
 		<TITLE>Stanford Dinner</TITLE>
