--- a/stanford-dine/app/views/welcome/index.html.erb
+++ b/stanford-dine/app/views/welcome/index.html.erb
@@ -5,7 +5,12 @@
 <script>
 $(document).ready(function(){
 	$('.plus-button').click(function(){
-		alert("jquery button was pressed");
+		alert("plus button  pressed");
+	})
+})
+$(document).ready(function(){
+	$('.minus-button').click(function(){
+		alert("minus button  pressed");
 	})
 })
 alert("javascript started");
