--- a/stanford-dine/app/views/welcome/index.html.erb
+++ b/stanford-dine/app/views/welcome/index.html.erb
@@ -1,21 +1,37 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 
 <link href="assets/bootstrap.css" rel="stylesheet">
-<script src="assets/jquery-1.11.2.min.js"></script>
+
 <script>
 $(document).ready(function(){
 	$('.plus-button').click(function(){
-		alert("plus button  pressed");
+		alert("plus button pressed");
+		$.ajax({
+			type: "POST",
+			url: "/vote"
+			data: {
+				hall_id = $(this).parent().attr("id");
+				vote = 1;
+			}
+			complete: function() {
+				alert("ajax complete");
+			}
+			success: function() {
+				alert("ajax success");
+			}
+			error: function() {
+				alert("ajax error");
+			}
+		})
 	})
 })
 $(document).ready(function(){
 	$('.minus-button').click(function(){
-		alert("minus button  pressed");
+		alert("minus button pressed");
 	})
 })
 alert("javascript started");
 </script> 
-
 
 <HTML>
 	<HEAD>
@@ -31,17 +47,14 @@ alert("javascript started");
 					<div class="panel"
 						<div class"thumbnail">
 							<img src="<%= hall.img %>">
-							<div class="caption" id="<% hall.id %>">
+							<div class="caption">
 								<h3><%= hall.name %></h3>
 								<p><h4><%= hall.score %></h4></p>
 								<p>
-<<<<<<< HEAD
-									<button type="button" class="btn btn-success" id="plus-button" role="button">+</button>
-									<button type="button" class="btn btn-danger" id="minus-button" role="button">-</button>
-=======
-									<button type="button" class="btn btn-success plus-button" role="button">+</button>
-									<button type="button" class="btn btn-danger minus-button" role="button">-</button>
->>>>>>> 5a078fa8121c317bd37405d1796dd5bdc2a2e497
+									<div id="<%= hall.id %>">
+										<button type="button" class="btn btn-success plus-button" role="button">+</button>
+										<button type="button" class="btn btn-danger minus-button" role="button">-</button>
+									</div>
 								</p>
 							</div>
 						</div>
