--- a/stanford-dine/app/views/welcome/index.html.erb
+++ b/stanford-dine/app/views/welcome/index.html.erb
@@ -8,10 +8,10 @@ $(document).ready(function(){
 		alert("plus button pressed");
 		$.ajax({
 			type: "POST",
-			url: "/vote"
+			url: "/vote",
 			data: {
-				hall_id = $(this).parent().attr("id");
-				vote = 1;
+				hall_id: $(this).parent().attr("id");
+				vote: 1;
 			}
 			complete: function() {
 				alert("ajax complete");
