--- a/stanford-dine/app/views/welcome/index.html.erb
+++ b/stanford-dine/app/views/welcome/index.html.erb
@@ -13,17 +13,13 @@
 		<div class="row">
 			<% @halls.each do |hall| %>
 				<div class="col-sm-4">
-					<div class"thumbnail">
+					<div class"well well-sm">
+						<div class="col-sm-3" id="<%= hall.id %>">
+							<button type="button" class="btn btn-success plus-button" role="button">+</button>
+							<button type="button" class="btn btn-danger minus-button" role="button">-</button>
+						</div>
 						<img src="<%= hall.img %>">
-						<div class="caption">
-							<h3><%= hall.name %></h3>
-							<p><h4><%= hall.score %></h4></p>
-							<p>
-								<div id="<%= hall.id %>">
-									<button type="button" class="btn btn-success plus-button" role="button">+</button>
-									<button type="button" class="btn btn-danger minus-button" role="button">-</button>
-								</div>
-							</p>
+						<p><h4><%= hall.score %></h4></p>
 						</div>
 					</div>
 				</div>
