--- a/stanford-dine/app/views/welcome/index.html.erb
+++ b/stanford-dine/app/views/welcome/index.html.erb
@@ -14,8 +14,12 @@
             <div class="row">
               <div class="col-md-2">
   				      <div class="btn-group-vertical" id="<%= hall.id %>">
-							    <button type="button" class="btn btn-success plus-button" role="button">+</button>
-  						    <button type="button" class="btn btn-danger minus-button" role="button">-</button>
+							    <button type="button" class="btn btn-success plus-button" role="button">
+							    	<span class="glyphicon glyphicon-chevron-up"></span>
+							    </button>
+  						    <button type="button" class="btn btn-danger minus-button" role="button">
+							    	<span class="glyphicon glyphicon-chevron-up"></span>
+  						    </button>
 						    </div>
               </div>
               <div class="col-md-8">
