--- a/stanford-dine/app/views/welcome/index.html.erb
+++ b/stanford-dine/app/views/welcome/index.html.erb
@@ -13,12 +13,12 @@
 				<div class="col-sm-4">
     			<div class="panel ">
             <div class="row">
-              <div class="col-md-3 outer">
+              <div class="col-md-3">
   				      <div class="btn-group-vertical" id="<%= hall.id %>">
-							    <button type="button" class="btn btn-success plus-button b-1" role="button">
+							    <button type="button" class="btn btn-success plus-button " role="button">
 							    	+
 							    </button>
-  						    <button type="button" class="btn btn-danger minus-button b-2" role="button">
+  						    <button type="button" class="btn btn-danger minus-button " role="button">
 							    	-
   						    </button>
 						    </div>
