--- a/stanford-dine/app/views/welcome/index.html.erb
+++ b/stanford-dine/app/views/welcome/index.html.erb
@@ -15,10 +15,10 @@
             <div class="row">
               <div class="col-md-3">
   				      <div class="btn-group-vertical" id="<%= hall.id %>">
-							    <button type="button" class="btn btn-success plus-button " role="button">
+							    <button type="button" class="btn btn-success plus-button b-1" role="button">
 							    	+
 							    </button>
-  						    <button type="button" class="btn btn-danger minus-button " role="button">
+  						    <button type="button" class="btn btn-danger minus-button b-2" role="button">
 							    	-
   						    </button>
 						    </div>
@@ -26,7 +26,7 @@
               <div class="col-md-6">
 						    <img src="<%= hall.img %>">
               </div>
-              <div id="score<%= hall.id %>" class ="score">
+              <div id="score<%= hall.id %>" >
 						    <%= hall.score %>
               </div>
             </div>
